Change session Id numbering

Assign the new session Id equal to the maximum existing Id + 1.

The session Id may be displayed in the tab title. If we open 2 tabs and
then close the second one, then the next opened tab will get number 3
instead of number 2, which can be confusing for the user.

BUG: 440878